deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple
spec:
  replicas: 2
  selector:
      matchLabels:
        app: apple
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
      - name: apple
        image: nikcarp/react-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guayaba
spec:
  replicas: 2
  selector:
      matchLabels:
        app: guayaba
  template:
    metadata:
      labels:
        app: guayaba
    spec:
      containers:
      - name: guayaba
        image: nikcarp/node-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      restartPolicy: Always
