service.yaml
kind: Service
apiVersion: v1
metadata:
  name: apple-service
spec:
  selector:
    app: apple
  ports:
    - port: 80 # Default port for image
      nodePort: 31000
  type: NodePort
---
kind: Service
apiVersion: v1
metadata:
  name: guayaba-service
spec:
  selector:
    app: guayaba
  ports:
    - port: 80 # Default port for image
      nodePort: 31001
  type: NodePort
